--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "concurrently \"npm run backend\" \"npm run frontend\"",
         "frontend": "cd frontend && npm run dev",
-        "backend": "cd backend && python main.py",
+        "backend": "npx -y kill-port 8000 && cd backend && python main.py",
         "install:all": "npm install && cd frontend && npm install",
         "dev": "npm run start"
     },
